# GAPSyntaxTreeTools

./: .gitignore  Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
gap/: GAPSyntaxTreeTools.gd  GAPSyntaxTreeTools.gi  syntaxtree.gi  tests.gd  tests.gi
scripts/: build_gap.sh
src/: GAPSyntaxTreeTools.c  syntaxtree.c
tst/: basic.tst  testall.g
